# openadp

./: .gitignore  AUTH0-CONFIGURATION.md  AUTHENTICATION-TESTING.md  AUTHENTICATION_CODE_MIGRATION_SUMMARY.md  AUTHORS  COVERAGE_TRACKING.md  DEPLOYMENT_OPTIMIZATION.md  FUZZ_TESTING.md  GO_VS_GLOBAL_SERVERS_TEST_REPORT.md  MODULE_REORGANIZATION.md  Makefile  NOISE_KK_GUIDE.md  NOISE_NK_GUIDE.md  NOISE_NK_MIGRATION_SUMMARY.md  PHASE-0-README.md  PHASE-1-SUMMARY.md  PHASE-2-SUMMARY.md  PHASE-3-REVERTED.md  PHASE-3-SUMMARY.md  PHASE-35-SUMMARY.md  PHASE-4-STATUS.md  PHASE-4.1-GLOBAL-AUTH.md  PHASE-5-CLIENT-DEFAULT.md  PORTING_PROGRESS_SUMMARY.md  PYTHON_FILES_STATUS.md  PYTHON_TO_GO_PORTING_PLAN.md  README-GO.md  README.md  SECURITY_DPOP_CNF_FIELD_FIX.md  SETUP.md  TEST_RESULTS_SUMMARY.md  TEST_STATUS_SUMMARY.md  TEST_VECTORS_README.md  TODO  TODO.md  cleanup_git_history.py  create_keycloak_client.py  debug_detailed_registration.py  debug_dpop_binding.py  debug_registration.py  (+54 more)
api/: servers.json  servers_example.json
client/: README.md  __init__.py  client.py  go.mod  jsonrpc_client.py
client/client/: encrypted_client.go  interfaces_test.go
client/keygen/: keygen.go  keygen_test.go
client/ocrypt/: ocrypt.go
cmd/: test.enc
cmd/ocrypt-recover/: main.go
cmd/ocrypt-register/: go.sum  main.go
cmd/openadp/: main.go
cmd/openadp-cli/: main.go
cmd/openadp-decrypt/: main.go
cmd/openadp-demo/: main.go
cmd/openadp-encrypt/: main.go
cmd/openadp-keygen/: main.go
cmd/openadp-server/: main.go  openadp.db-shm  openadp.db-wal  server_api_fuzz_test.go
cmd/openadp-serverinfo/: main.go
cmd/run-tests/: main.go
common/: README.md  go.mod  go.sum
common/crypto/: crypto_comprehensive_test.go  crypto_security_test.go  crypto_test.go
common/noise/: noise_nk.go  noise_nk_deterministic_test.go
common/sharing/: sharing.go  sharing_comprehensive_test.go  sharing_security_test.go  sharing_test.go
debug/: debug_auth_endpoints.py  debug_callback.py  debug_conversion.go  debug_test.go  example_test.go  explain_conversion.py
demos/: README.md
demos/private-notes/: CONTENT_ADDRESSABLE.md  DESIGN.md  OPERATION_COMPACTION.md  OPERATION_LOG.md  SECURITY.md
deployment/keycloak/: HTTPS-PROXY-CONFIG.md  README.md  docker-compose.keycloak.yml  fix-frontend-url.py  setup-keycloak.sh
deployment/scripts/: deploy-servers.sh  install-openadp-service.sh
docs/: API_REFERENCE.md  CLIENT_CLEANUP_COMPLETED.md  CLIENT_CLEANUP_PLAN.md  E2E_TEST_PLAN.md  GETTING_STARTED.md  NEXT_STEPS.md  NOISE_NK_GUIDE.md  PROJECT-OVERVIEW.md  README.md  SDK_DEVELOPMENT_PLAN.md  SDK_GUIDE.md  SECURITY_MODEL.md  SERVER_API.md  TESTING.md  authentication-code-design.md  authn-authz-design.md  comprehensive-test-plan.md  detailed-design.md  fake-keycloak-design.md  ocrypt_design.md  recovery-code-auth-design.md  test-plan.md
examples/: ocrypt_demo.go  ocrypt_demo.py  two_phase_commit_demo.py
ghost-notes/: README-OpenADP.md  README-Simple.md  README.md  app.js  debug-openadp.html  debug.html  ghost-notes-design.md  index-openadp-simple.html  index-openadp.html  index.html  manifest.json  noise-nk.js  openadp-app.js  openadp-demo.html  openadp-ghost.js  package-lock.json  package.json  serve.py  styles.css  sw.js  test-openadp.html  test.html
monitoring/: CUSTOM_DOMAIN_SETUP.md  DESIGN.md  README.md  cloudflare-worker.js  config-helper.sh  dashboard.html  deploy.sh  dev-setup.sh  finish-deploy.sh  package.json  wrangler.toml
ocrypt/: README.md  go.mod
openadp/: __init__.py  auth_code_manager.py  crypto.py  database.py  keygen.py  noise_nk.py  noise_nk_demo.py
proto/: README.md  openadp.proto  openadp_pb2.py
prototype/: README.md  TODO  client.py  crypto.py  database.py  debug_conversion.py  debug_shares.py  decrypt.py  encrypt.py  install-openadp-service-auto.sh  install-openadp-service-fedora.sh  install-openadp-service.sh  jsonrpc_client.py  jsonrpc_server.py  openadp-server.service  openadp_grpc_server.py  openadp_keygen.py  openadp_server.py  requirements.txt  run_server.py  scrape.py  server.py  sharing.py  test_file.txt  test_fresh_openadp.py  test_large_y.py  test_register.py  test_registration_debug.py  test_unique_bids.py
prototypes/: README.md  crypto.py  database.py  openadp_server.py  shamir.py  sharing.py
scripts/: OPERATOR_GUIDE.md  README.md  run-staging-node.sh  serve_homepage.py  setup-keycloak.sh  setup-phase-0.sh  setup_env.sh  sync_to_homepage.sh  test-pop-token.py  update-openadp-node.sh
sdk/: NOISE_NK_COMPATIBILITY_REPORT.md  basic_go_integration_test.py  cross_compatibility_test.py  cross_language_test.py  debug_detailed.py  debug_handshake.js  debug_handshake_hash.py  debug_public_key.py  debug_python_handshake.py  debug_step_by_step.py  js_steps.js  noise_nk_test_vectors.json  run_compatibility_test.py  server_info.json  test_cross_platform.py  test_vectors.py
sdk/cpp/: CMakeLists.txt  README.md  generate_test_vectors.cpp
sdk/cpp/include/: openadp.hpp
sdk/cpp/include/openadp/: client.hpp  crypto.h  crypto.hpp  debug.hpp  noise.hpp  ocrypt.hpp  types.hpp  utils.hpp
sdk/cpp/src/: client.cpp  crypto.cpp  debug.cpp  hex.cpp  keygen.cpp  noise.cpp  ocrypt.cpp  openadp.cpp
sdk/cpp/tests/: test_base64.cpp  test_client.cpp  test_crypto.cpp  test_crypto_vectors.cpp  test_hex.cpp  test_keygen.cpp  test_noise.cpp  test_noise_cross_language.cpp  test_noise_debug.cpp  test_ocrypt.cpp  test_openadp.cpp
sdk/cpp/tools/: noise_server.cpp  ocrypt-recover.cpp  ocrypt-register.cpp  openadp-decrypt.cpp  openadp-encrypt.cpp
sdk/rust/: Cargo.toml  OVERVIEW.md  README.md
sdk/rust/examples/: api_key_protection.rs  basic_usage.rs  full_openadp_demo.rs  noise_client.rs
sdk/rust/src/: client.rs  crypto.rs  keygen.rs  lib.rs  ocrypt.rs  recovery.rs  test_main.rs
server/: README.md  __init__.py  auth_code_middleware.py  go.mod  go.sum  jsonrpc_server.py  noise_session_manager.py  server.py
tests/: README.md  auth_helper.py  conftest.py  fake_keycloak.py
tools/: auth_code_demo.py  decrypt.py  encrypt.py  generate_server_key.py  openadp-decrypt.py  openadp-encrypt.py
(+354 files in other folders)
